--- a/academia-hugo/layouts/404.html
+++ b/academia-hugo/layouts/404.html
@@ -20,7 +20,7 @@
   {{ if gt $count 0 }}
   <h2>{{ i18n "user_profile_latest" }}</h2>
   <ul>
-    {{ range first 10 $query }}
+    {{ range last 3 $query }}
       <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
     {{ end }}
   </ul>
