--- a/academia-hugo/layouts/partials/site_footer.html
+++ b/academia-hugo/layouts/partials/site_footer.html
@@ -11,7 +11,7 @@
         <p>
           {{ with site.Copyright }}{{ replace . "{year}" now.Year | markdownify}} &middot; {{ end }}
           
-          <a href="https://akshayjoshi.tech" target="_blank" rel="noopener">Akshay Joshi</a>
+          <a href="https://akjo.tech" target="_blank" rel="noopener">Akshay Joshi</a>
         </p>
       </div>
       <div class="col-md-6">
