--- a/academia-hugo/layouts/partials/widgets/hero.html
+++ b/academia-hugo/layouts/partials/widgets/hero.html
@@ -48,7 +48,7 @@
   {{ if $page.Params.hero_media }}
   </div>
   <div class="col-10 mx-auto col-md-6 order-md-2 hero-media">
-    <img class="hero-img img-fluid" src="{{ printf "img/%s" $page.Params.hero_media | relURL }}" alt="">
+    <img class="hero-img img-fluid" src="{{ printf "img/%s" $page.Params.hero_media | relURL }}" alt="Akshay Joshi is a Senior AI Research Scientist - Google, ETH Zurich, AMD, DFKI, Saarland University">
   </div>
 </div>
 {{ end }}
