--- a/academia-hugo/layouts/partials/page_header.html
+++ b/academia-hugo/layouts/partials/page_header.html
@@ -23,7 +23,7 @@
 <div class="container split-header">
   <div class="row justify-content-center">
     <div class="col-lg-8">
-        <img class="img-fluid w-100" src="{{ $image.RelPermalink }}" itemprop="image" alt="">
+        <img class="img-fluid w-100" src="{{ $image.RelPermalink }}" itemprop="image" alt="Akshay Joshi is a Senior AI Research Scientist - Google, ETH Zurich, AMD, DFKI, Saarland University">
         {{ with $.Params.image.caption }}<span
           class="article-header-caption">{{ . | markdownify | emojify }}</span>{{ end }}
     </div>
