--- a/academia-hugo/layouts/partials/project_li_card.html
+++ b/academia-hugo/layouts/partials/project_li_card.html
@@ -12,7 +12,7 @@
     {{ with $resource }}
     {{ $image := .Resize (printf "550x q90 %s") }}
     <a href="{{ $link }}" {{ $target | safeHTMLAttr }} class="card-image">
-      <img src="{{ $image.RelPermalink }}" alt="" class="img-responsive">
+      <img src="{{ $image.RelPermalink }}" alt="Akshay Joshi, Akshay Joshi Google - WikiArt, Covid, Object detection, yolo, car counting, speech recognition, reinforcement learning, cnn, gnn, socket programming" class="img-responsive">
     </a>
     {{ end }}
     <div class="card-body">
