--- a/academia-hugo/layouts/partials/project_li_showcase.html
+++ b/academia-hugo/layouts/partials/project_li_showcase.html
@@ -49,7 +49,7 @@
       {{ with $resource }}
       {{ $image := .Resize "540x" }}
       {{if $do_link}}<a href="{{ $link }}" {{ $target | safeHTMLAttr }}>{{end}}
-        <img src="{{ $image.RelPermalink }}" itemprop="image" alt="">
+        <img src="{{ $image.RelPermalink }}" itemprop="image" alt="Akshay Joshi, Akshay Joshi Google - WikiArt, Covid, Object detection, yolo, car counting, speech recognition, reinforcement learning, cnn, gnn, socket programming">
       {{if $do_link}}</a>{{end}}
       {{end}}
     </div>
